--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~8.2.14",
     "@ng-bootstrap/ng-bootstrap": "^5.1.5",
     "bootstrap": "^4.4.1",
+    "component": "^1.1.0",
     "ng-bootstrap": "^1.6.3",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
